--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,12 @@
 ---
-title: Welcome to Middleman
 ---
 
-<div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<div id="hello">
+  <div class="container">
+    <div class="row">
+      <div class="centered">
+        <h1>JR東日本 乗車人員グラフ</h1>
+      </div><!-- /col-lg-8 -->
+    </div><!-- /row -->
+  </div> <!-- /container -->
+</div><!-- /hello -->
