jsonからデータの出力

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,7 +6,74 @@
     <div class="row">
       <div class="centered">
         <h1>JR東日本 乗車人員グラフ</h1>
-      </div><!-- /col-lg-8 -->
+      </div><!-- /centered -->
     </div><!-- /row -->
   </div> <!-- /container -->
 </div><!-- /hello -->
+
+<div id="green">
+  <div class="container">
+    <div class="row">
+      <ul id="tabes" class="nav nav-tabs">
+        <li class="active"><a data-toggle="tab" href="#2012">2012</a></li>
+        <li><a data-toggle="tab" href="#2011">2011</a></li>
+        <li><a data-toggle="tab" href="#2010">2010</a></li>
+        <li><a data-toggle="tab" href="#2009">2009</a></li>
+        <li><a data-toggle="tab" href="#2008">2008</a></li>
+        <li><a data-toggle="tab" href="#2007">2007</a></li>
+        <li><a data-toggle="tab" href="#2006">2006</a></li>
+        <li><a data-toggle="tab" href="#2005">2005</a></li>
+        <li><a data-toggle="tab" href="#2004">2004</a></li>
+        <li><a data-toggle="tab" href="#2003">2003</a></li>
+        <li><a data-toggle="tab" href="#2002">2002</a></li>
+        <li><a data-toggle="tab" href="#2001">2001</a></li>
+        <li><a data-toggle="tab" href="#2000">2000</a></li>
+        <li><a data-toggle="tab" href="#1999">1999</a></li>
+      </ul>
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th>Rank</th>
+            <th>City</th>
+            <th>Total</th>
+          </tr>
+        </thead>
+        <tbody id="list"></tbody>
+      </table>
+    </div><!-- /row -->
+  </div> <!-- /container -->
+</div><!-- /green -->
+
+<script>
+  $(function() {
+    var $document;
+
+    $document = $(document);
+
+    $document.on('click', 'a[data-toggle="tab"]', function(e) {
+      $("#list").html('');
+      var year;
+      year = e.target.href.split("#")[1];
+      list(year);
+      return false;
+    });
+
+    list("2012");
+
+    function list(year) {
+      $.getJSON("javascripts/json/" + year + ".json" , function(data) {
+        var listObj = $("#list");
+        var len = data.length;
+
+        for(var i = 0; i < len; i++) {
+          listObj.append(
+            $("<tr>")
+              .append($("<td>").text(data[i].rank))
+            .append($("<td>").text(data[i].city))
+            .append($("<td>").text(data[i].total))
+          );
+        }
+      });
+    }
+  });
+</script>
