--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,7 +13,7 @@
     <%= javascript_include_tag  "//code.jquery.com/jquery-1.10.2.min.js", "all" %>
   </head>
 
-  <body class="<%= page_classes %>">
+  <body class="<%= page_classes %> centered">
 
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
