空白行の削除

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,6 +15,7 @@
   <div class="container">
     <div class="row">
       <h3>年間乗車人員のグラフ表示</h3>
+      <p><%= link_to 'JR東日本：各駅の乗車人員', 'http://www.jreast.co.jp/passenger/'%></p>
     </div><!-- /row -->
   </div> <!-- /container -->
 </div><!-- /green -->
